Scrolling Issue on IOS Fix
Hopefully Fixed Part 2

--- a/public/home/home.css
+++ b/public/home/home.css
@@ -52,7 +52,7 @@ body {
     background-size: cover;
     background-attachment: fixed;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: scroll;
     user-select: none;
     display: flex;
     flex-direction: column;
